[workspace]
resolver = "2"
members = ["http-tunnel-client", "http-tunnel-server"]


[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
hyper = { version = "1.2", features = ["server", "client", "http1"] }
thiserror = "1.0"
http = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
hyper-util = { version = "0.1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
