[package]
name = "http-tunnel-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
hyper-util = { workspace = true }
tokio-stream = { workspace = true }
http-body-util = "0.1"
tokio-util = { workspace = true }
