[package]
name = "http-tunnel-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
